syntax = "proto3";
package wire;

message EventDescr {
  bytes Creator = 1;
  bytes Hash = 2;
}

message Frame {
  uint32 Index = 1;
  repeated EventDescr Events = 2;
  repeated EventDescr Roots = 3;
  uint64 timeOffset = 4;
  uint64 timeRatio = 5;
}
